# thesis

./: .gitignore  README.md  _quarto.yml  index.qmd  pyproject.toml  references.bib
chapters/: 01_introduction.qmd  02_literature_review.qmd  03_materials_and_methods.qmd  03a_datasets.ipynb  03a_lysva_dataset.ipynb  03a_lysva_dataset.qmd  03a_test.ipynb  03b_augmentations.ipynb  03b_individual_trees.ipynb  03b_individual_trees_dataset.qmd  03c_synthetic_forest.ipynb  03c_synthetic_forest_datasets.qmd  03d_augmentations.ipynb  03d_training_tree_segmentors.qmd  03e_training_segment_processors.qmd  04_results.qmd  05_conclusion.qmd
docs/: index.html  search.json
docs/chapters/: 01_introduction.html  02_literature_review.html  03_materials_and_methods.html  04_results.html  05_conclusion.html  99_references.html
latex/: README.md  abstract.tex  acknowledgements.tex  bibliography.tex  cover.tex  glossary-definitions.tex  glossary.tex  main.tex  prelude.tex  publications.tex  sk-thesis.cls
latex/chapters/: 01_introduction.tex  02_literature_review.tex  03_materials_and_methods.tex  04_results.tex  05_conclusion.tex
