[project]
name = "thesis"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Ivan Dubrovin", email = "Ivan.Dubrovin@skoltech.ru"},
]
dependencies = [
    "jupyter>=1.0.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}


[tool.pdm]
distribution = false
